Se agregan vistas para la 2FA y modifican algunas cosas para el cambio de clave

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <base href="/">
-    <title>Home - NATURA</title>
+    <title>Home - El Desquite</title>
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
